fixed slide height for non mobile screen

--- a/app/styles/2-layouts/_section8.scss
+++ b/app/styles/2-layouts/_section8.scss
@@ -1,5 +1,7 @@
-.fp-section {
-	height: 730px !important;
+@media screen and (max-width: 768px) {
+	.fp-section {
+		height: 730px !important;
+	}
 }
 
 #section8a {
